Feature: Move messages to config file and implement reload functionality